Changing default li's in index.html

--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
 	<input type="text" placeholder="Add New Todo">
 
 	<ul>
-		<li><span><i class="fa fa-trash"></i></span> Go To Potions Class</li>
-		<li><span><i class="fa fa-trash"></i></span> Buy New Robes</li>
-		<li><span><i class="fa fa-trash"></i></span> Visit Hagrid</li>
+		<li><span><i class="fa fa-trash"></i></span>Delete This ToDo and Add yours </li>
+		
 	</ul>
 </div>
 
